.automation/test/salesforce/bad/sfdxProject/force-app/main/default/objects/AppLoadedCSS__mdt/fields/CssPath__c.field-meta.xml
<CustomField>
    <fullName>CssPath__c</fullName>
    <description>Path of the css file inside the Resource
Example: /resource/css/irm-style-clientName.css</description>
    <inlineHelpText>Path of the css file inside the Resource
Example: /resource/css/irm-style-clientName.css</inlineHelpText>
    <label>CssPath</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>