.automation/test/salesforce/bad/sfdxProject/force-app/main/default/objects/AppLoadedCSS__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activated or not</description>
    <inlineHelpText>Activated or not</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>