.automation/test/salesforce/bad/sfdxProject/force-app/main/default/objects/AppLoadedCSS__mdt/fields/LoadingOrder__c.field-meta.xml
<CustomField>
    <fullName>LoadingOrder__c</fullName>
    <description>Order used to load the css file</description>
    <inlineHelpText>Order used to load the css file</inlineHelpText>
    <label>LoadingOrder</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>