.automation/test/salesforce/bad/sfdxProject/force-app/main/default/objects/AppLoadedCSS__mdt/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <description>Developer name of the static resource where the css file to load is</description>
    <inlineHelpText>Developer name of the static resource where the css file to load is</inlineHelpText>
    <label>Resource</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>