.automation/test/salesforce/bad/sfdxProject/force-app/main/default/objects/AppLoadedCSS__mdt/fields/UserTheme__c.field-meta.xml
<CustomField>
    <fullName>UserTheme__c</fullName>
    <description>User theme matching this CSS to load ( update user information to set it )</description>
    <inlineHelpText>User theme matching this CSS to load ( update user information to set it )</inlineHelpText>
    <label>UserTheme</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>BaseBlue</fullName>
            </value>
            <value>
                <fullName>BaseBlueLight</fullName>
            </value>
            <value>
                <fullName>BaseDXC</fullName>
            </value>
            <value>
                <fullName>BaseFlat</fullName>
            </value>
            <value>
                <fullName>BaseGreen</fullName>
            </value>
             <value>
                <fullName>BaseGreenLight</fullName>
            </value>
            <value>
                <fullName>BaseKhaki</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>DXC</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Lelamanul</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>